--- a/amg-reader/src/pages/blog-detail/blog-detail.scss
+++ b/amg-reader/src/pages/blog-detail/blog-detail.scss
@@ -1,3 +1,24 @@
 page-blog-detail {
 
+  .imageContainer {
+    width: 100%;
+    height: 38vh;
+    text-align: center;
+
+    img {
+      height: 100%;
+      max-width: none;
+    }
+  }
+
+  .title {
+    text-align: center;
+    width: 80%;
+    margin-left: 10%;
+  }
+
+  .content {
+    padding: 5px 20px;
+  }
+
 }
