Added categories description box + changed http.ts to return JSON object rather than a string

--- a/amg-reader/src/pages/category-list/category-list.scss
+++ b/amg-reader/src/pages/category-list/category-list.scss
@@ -1,6 +1,10 @@
 page-category-list {
     
     .category-text{
-        font-size:2em;
+        font-size:1.5em;
+    }
+    .category-description-text{
+        font-size:1em;
     }
 }
+
