--- a/amg-reader/src/theme/variables.scss
+++ b/amg-reader/src/theme/variables.scss
@@ -38,7 +38,11 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  red: #d9534f ,
+  off-black: #444,
+  white: #fff ,
+  black: #333
 );
 
 
