--- a/amg-reader/src/pages/blog-detail/blog-detail.scss
+++ b/amg-reader/src/pages/blog-detail/blog-detail.scss
@@ -1,5 +1,10 @@
 page-blog-detail {
 
+  .header .toolbar-background {
+    background: transparent;
+    border-bottom: none;
+  }
+
   .imageContainer {
     width: 100%;
     height: 38vh;
@@ -19,6 +24,11 @@ page-blog-detail {
 
   .content {
     padding: 5px 20px;
+  }
+
+  .footer .toolbar .icon {
+    font-size: 2em;
+    padding-left: 10px;
   }
 
 }
