--- a/amg-reader/src/pages/photoblog-detail/photoblog-detail.scss
+++ b/amg-reader/src/pages/photoblog-detail/photoblog-detail.scss
@@ -1,3 +1,33 @@
 page-photoblog-detail {
 
+  .header .toolbar-background {
+    background: transparent;
+    border-bottom: none;
+  }
+
+  .imageContainer {
+    width: 100%;
+    height: 38vh;
+    text-align: center;
+
+    img {
+      height: 100%;
+      max-width: none;
+    }
+  }
+
+  .title {
+    text-align: center;
+    width: 80%;
+    margin-left: 10%;
+  }
+
+  .content {
+    padding: 5px 20px;
+  }
+
+  .footer .toolbar .icon {
+    font-size: 2em;
+    padding-left: 10px;
+  }
 }
