--- a/amg-reader/src/pages/photoblog-list/photoblog-list.scss
+++ b/amg-reader/src/pages/photoblog-list/photoblog-list.scss
@@ -1,3 +1,51 @@
 page-photoblog-list {
 
+  .postPreviewContainer {
+
+    //padding: 8px 0;
+    //border-bottom: 0.55px solid rgba(139, 139, 139, 0.46);
+
+    .card {
+      //-webkit-box-shadow: none;
+      //-moz-box-shadow: none;
+      //box-shadow: none;
+
+      .content {
+        float: left;
+      }
+
+      .content.image {
+        width: 100%;
+        max-height: 150px;
+        overflow: hidden;
+
+        img {
+          width: 100%
+        }
+
+      }
+
+      .content.info {
+        width: 100%;
+        padding: 11px;
+
+        .metadata {
+          padding-bottom: 5px;
+          color: rgba(48, 48, 48, 0.73);
+        }
+
+        .divider {
+          height: 1px;
+          width: 11%;
+          background: rgba(48, 48, 48, 0.22);
+          margin: 4px 0 7px;
+        }
+
+        .title {
+          font-size: 16px;
+        }
+
+      }
+    }
+  }
 }
