--- a/amg-reader/src/pages/home/home.scss
+++ b/amg-reader/src/pages/home/home.scss
@@ -1,16 +1,18 @@
 page-home {}
 
-.horizontal-scroll {
-  ion-scroll[scrollX] {
-    white-space: nowrap;
-    height:100px;
-    .scroll-item {
-        // height:100%;
-        display: inline-block;
-        margin-top:-5.5em;
-        
-    }
-  }
+.small-title{
+  font-weight: bold;
+  font-size: 1em;
+}
+
+.small-metadata{
+  color:grey;
+  font-size:1em;
+}
+
+.small-image{
+  width: 100%; 
+  height:100%;
 }
 
 .latest-post {
