added in-app magazine reader to app

--- a/amg-reader/src/pages/magazine-list/magazine-list.scss
+++ b/amg-reader/src/pages/magazine-list/magazine-list.scss
@@ -1,3 +1,10 @@
 page-magazine-list {
+  .postPreviewContainer {
+    .card {
+      -webkit-box-shadow: none;
+      -moz-box-shadow: none;
+      box-shadow: none;
 
+    }
+  }
 }
