Fixed styling for homepage and improved blog list + photoblog list + magazine list

--- a/amg-reader/src/pages/blog-detail/blog-detail.scss
+++ b/amg-reader/src/pages/blog-detail/blog-detail.scss
@@ -31,4 +31,9 @@ page-blog-detail {
     padding-left: 10px;
   }
 
+  .share-button{
+    margin-top:5%;
+    color:color($colors,primary);
+  }
+
 }
