--- a/amg-reader/src/pages/photoblog-detail/photoblog-detail.scss
+++ b/amg-reader/src/pages/photoblog-detail/photoblog-detail.scss
@@ -30,4 +30,11 @@ page-photoblog-detail {
     font-size: 2em;
     padding-left: 10px;
   }
+
+  .share-button{
+    color:color($colors,primary);
+    margin-top:5%;
+  }
+
+
 }
