--- a/amg-reader/src/app/app.html
+++ b/amg-reader/src/app/app.html
@@ -5,11 +5,15 @@
     </ion-toolbar>
   </ion-header>
 
+  <!-- Original menu -->
   <ion-content>
     <ion-list>
-      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
-        {{p.title}}
-      </button>
+      <div *ngFor="let p of pages">      
+        <button menuClose ion-item (click)="openPage(p)">
+            <span *ngIf="p.title != 'Categories'">{{p.title}}</span>
+          <span style="margin-left:10%" *ngIf="p.title == 'Categories'">{{p.title}}</span>
+        </button>
+     </div>
     </ion-list>
   </ion-content>
 
