--- a/amg-reader/src/pages/blog-list/blog-list.scss
+++ b/amg-reader/src/pages/blog-list/blog-list.scss
@@ -16,12 +16,13 @@ page-blog-list {
 
       .content.image {
         width: 100%;
-        max-height: 150px;
+        max-height: 200px;
         overflow: hidden;
 
         img {
           width: 100%
         }
+        // margin-bottom:5%;
 
       }
 
