--- a/amg-reader/src/pages/home/home.scss
+++ b/amg-reader/src/pages/home/home.scss
@@ -1,56 +1,93 @@
-page-home {}
-
-.small-title{
-  font-weight: bold;
-  font-size: 1em;
+page-home {
 }
 
-.small-metadata{
-  color:grey;
-  font-size:1em;
-  
+.divider-title {
+  padding: 15px 10px 5px 13px;
+  font-size: 22px;
+  color: #4e4e4e;
 }
 
-.small-image{
-  width: 100%; 
-  height:100%;
+.custom-card {
+  margin: 10px;
+  position: relative;
+  overflow: hidden;
+  text-align: center;
+  border-radius: 10px;
+  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
 }
 
-.latest-post {
-  margin-bottom: 1em;
-  background-color:white;
+.blog-item.main-item {
+  height: 250px;
 }
 
-.title {
-  font-weight: bold;
-  font-size: 1.5em;
+.blog-item.secondary-item {
+  height: 150px;
+  width: calc(50% - 20px);
+  display: inline-block;
+
+  .content-container {
+    background: rgba(0, 0, 0, 0.5);
+  }
+
 }
 
-.metadata {
-  // float:right;
-  color: grey;
-  font-size: 1.25em;
-  backgrond-color:white;
+.blog-item {
+
+  img {
+    height: calc(100% + 5px);
+    max-width: none;
+  }
+
+  .content-container {
+    display: table;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(162, 40, 51, 0.5);
+    top: 0;
+
+    .content {
+      height: 100%;
+      display: table-cell;
+      vertical-align: middle;
+      text-align: center;
+      padding: 20px;
+      color: white;
+      font-size: 1.35em;
+
+      .metadata {
+        font-size: 0.85em;
+        color: rgba(255, 255, 255, 0.85);
+      }
+
+    }
+  }
+}
+
+.magazine-issue {
+  padding: 10px;
+  overflow: hidden;
+  position: relative;
+
+  .content {
+
+    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+
+    border-radius: 10px;
+
+    .title {
+      padding: 10px 10px 14px 10px;
+      font-size: 1.35em;
+    }
+
+  }
 }
 
 #logo {
   margin-top: 2px;
   height: 27px;
-}
-
-.other-articles{
-  background-color:white;
-}
-
-hr{
-  background-color:white;
-}
-
-.white-background {
-  background-color:white;
-}
-
-.header-title {
-  // background-color:color($colors,primary);
-  // color:white;
 }
