--- a/amg-reader/src/pages/magazine-list/magazine-list.scss
+++ b/amg-reader/src/pages/magazine-list/magazine-list.scss
@@ -4,10 +4,31 @@ page-magazine-list {
       -webkit-box-shadow: none;
       -moz-box-shadow: none;
       box-shadow: none;
+      position: relative;
 
     }
-    .content .image{
-      margin-bottom:5%;
+  }
+
+  .magazine-issue {
+    padding: 10px;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+
+    .content {
+
+      -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+      -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+
+      border-radius: 10px;
+
+      .title {
+        padding: 10px 10px 14px 10px;
+        font-size: 1.35em;
+      }
+
     }
   }
+
 }
