--- a/amg-reader/src/pages/photoblog-list/photoblog-list.scss
+++ b/amg-reader/src/pages/photoblog-list/photoblog-list.scss
@@ -1,51 +1,48 @@
 page-photoblog-list {
 
-  .postPreviewContainer {
+  .blog-item {
+    margin: 10px;
+    position: relative;
+    overflow: hidden;
+    text-align: center;
+    border-radius: 10px;
+    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
 
-    //padding: 8px 0;
-    //border-bottom: 0.55px solid rgba(139, 139, 139, 0.46);
+    height: 250px;
+    width: calc(100% - 20px);
+    display: inline-block;
 
-    .card {
-      //-webkit-box-shadow: none;
-      //-moz-box-shadow: none;
-      //box-shadow: none;
+    img {
+      height: calc(100% + 5px);
+      max-width: none;
+    }
+
+    .content-container {
+      display: table;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      top: 0;
 
       .content {
-        float: left;
-      }
-
-      .content.image {
-        width: 100%;
-        max-height: 200px;
-        overflow: hidden;
-
-        img {
-          width: 100%
-        }
-
-      }
-
-      .content.info {
-        width: 100%;
-        padding: 11px;
+        height: 100%;
+        display: table-cell;
+        vertical-align: middle;
+        text-align: center;
+        padding: 20px;
+        color: white;
+        font-size: 1.35em;
 
         .metadata {
-          padding-bottom: 5px;
-          color: rgba(48, 48, 48, 0.73);
-        }
-
-        .divider {
-          height: 1px;
-          width: 11%;
-          background: rgba(48, 48, 48, 0.22);
-          margin: 4px 0 7px;
-        }
-
-        .title {
-          font-size: 18px;
+          font-size: 0.85em;
+          color: rgba(255, 255, 255, 0.85);
         }
 
       }
     }
   }
+
 }
